hard-gists/4ed43412878723491240814a0d5a6ed6/run.log
=== Docker Run Log for 4ed43412878723491240814a0d5a6ed6 ===
Started at: Mi 29. Okt 15:13:27 CET 2025

[2025-10-29 15:13:27] START: Running container for 4ed43412878723491240814a0d5a6ed6
[2025-10-29 15:13:27] SUCCESS: Container 95bd45dcbcb85d4b53b21bd4645ea4cbe1399c4b02d941e98ca8c28b7846b82c started for 4ed43412878723491240814a0d5a6ed6
=== Container logs for 4ed43412878723491240814a0d5a6ed6 ===
  File "/snippet.py", line 230
    print min_peak if min_peak is not None else -1
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4ed43412878723491240814a0d5a6ed6 ===
[2025-10-29 15:13:29] INFO: Container 95bd45dcbcb85d4b53b21bd4645ea4cbe1399c4b02d941e98ca8c28b7846b82c has stopped
